--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hein Myat Naing</h1>
-    <h1>I Live in Taunggyi</h1>
+    <h3>Nant Ei Mon Kyaw Ko Chit Tal</h3>
 </body>
 </html>
